fixed overlap nav spacing for contact page

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -2,7 +2,7 @@ body{
     background-color: #F5F7F9;
 }
 .container{
-    margin:3em;
+    margin:6em;
 }
 
 .meet_container{
